--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="warp">
         <section>
+            <img class="profile_image" src="../profile_p.png">
             <div class="title-bar">
                 <h1><span id="role"></span>로 활동하는 <span id="name">안성해</span>입니다.</h1>
             </div>
@@ -31,7 +32,9 @@
                     서브로 C언어와 Python, SQL등을 사용하고 있습니다.
                 </h3>
             </div>
+
             <br><br><br><br><br>
+
             <div class="team-list">
                 <h1 class="team-in-title">🖥️ 저는 아래의 팀에서 활동하고 있어요!</h1>
                 <h3 class="team-description">
@@ -44,6 +47,33 @@
                 <h3 class="team-list-name-2">
                     <img id="kkutuio" src="../download.png">
                     끄투리오
+                </h3>
+            </div>
+
+            <br><br><br><br><br>
+
+            <div class="development">
+                <h1 class="development-title">🔨 저는 아래의 서비스를 개발했어요!</h1>
+                <h3 class="development-description">
+                    저는 아래의 서비스들을 개발했습니다!<br>
+                    미흡한점이 있더라도 너그럽게 봐주세요!
+                </h3>
+                <h3 class="develop-list-name-1">
+                    부마끄투
+                </h3>
+                <h3 class="develop-list-name-2">
+                    BUWI
+                </h3>
+            </div>
+            
+            <br><br><br><br><br>
+
+            <div class="contact">
+                <h1 class="contact-title">📞 저와 연락을 하고싶으시다면 아래를 확인하세요!!</h1>
+                <h3 class="contact-description">
+                    TEL : +82 10 - 9106 - 3576<br>
+                    MAIL : ahshss903@gmail.com<br>
+                    DISCORD : 안유일#1059
                 </h3>
             </div>
         </section>
