License 수정 및 버그수정

--- a/index_old.html
+++ b/index_old.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="kr">
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunghae's Portfolio</title>
     <link rel="stylesheet" href="./public/css/index.css">
     <link rel="stylesheet" href="./public/css/static.css">
@@ -52,7 +53,7 @@
                     I-Diot (FrontEnd)
                 </h3>
                 <h3 class="team-list-name-2">
-                    <img id="kkutuio" src="./public/download.png">
+                    <img id="kkutuio" src="./public/download.png" alt="kkutuio">
                     끄투리오
                 </h3>
             </div>
