--- a/index_old.html
+++ b/index_old.html
@@ -33,7 +33,7 @@
                 <h1 class="infomation-title">👋 안녕하세요!</h1>
                 <h3 class="infomation-description">안녕하세요, <span id="lang"></span>사용하는 <span id="name">안성해</span>
                     입니다.<br>
-                    2023년, 현재 부산소프트웨어마이스터고등학교에 재학중이며, 웹분야를 전문적으로 공부하고 있습니다!<br>
+                    2024년, 현재 자퇴 후 개인적으로 코딩을 공부하고있으며, 웹분야를 전문적으로 공부하고 있습니다!<br>
                     더욱 더 노력하여 계속해서 성장해 나가겠습니다!
                 </h3><br>
                 <h3>저는 주로 Node.js와 JavaScript, TypeScript와 Rust를 사용하고 있으며, <br>
@@ -50,11 +50,10 @@
                     대부분 학교의 동아리 또는 팀으로 구성되어있습니다!
                 </h3>
                 <h3 class="team-list-name-1">
-                    I-Diot (FrontEnd)
+                    Codat : Code At [대표]
                 </h3>
                 <h3 class="team-list-name-2">
-                    <img id="kkutuio" src="./public/download.png" alt="kkutuio">
-                    끄투리오
+                    0179 Games [대표]
                 </h3>
             </div>
 
@@ -67,10 +66,7 @@
                     미흡한점이 있더라도 너그럽게 봐주세요!
                 </h3>
                 <h3 class="develop-list-name-1">
-                    부마끄투
-                </h3>
-                <h3 class="develop-list-name-2">
-                    BUWI [개발중]
+                    현재 개발중입니다.
                 </h3>
             </div>
             
