--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="ko">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="UTF-8" />
     <title>Sunghae's Portfolio</title>
@@ -17,7 +17,7 @@
         <header class="header-menu">
             <nav id="menu-logo">SunghaeAn</nav>
             <div class="menu-all">
-                <a href="./index.html" id="menu-home">HOME</a>
+                <a href="./index_old.html" id="menu-home">HOME</a>
                 <a href="./project.html" id="menu-project">PROJECT</a>
             </div>
         </header>
