--- a/project.html
+++ b/project.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <title>Sunghae's Portfolio</title>
-    <link rel="stylesheet" href="./public/css/project.css">
-    <link rel="stylesheet" href="./public/css/static.css">
-    <script src="./public/js/script.js"></script>
+    <link rel="stylesheet" href="<% BASE_URL %>/public/css/project.css">
+    <link rel="stylesheet" href="<% BASE_URL %>/public/css/static.css">
+    <script src="<% BASE_URL %>/public/js/script.js"></script>
     <script>
         $('#scrollDiv').scrollTop($('#scrollDiv').prop('scrollHeight'));
     </script>
